# transit-query

./: .envrc  .graphqlrc.yml  Cargo.toml  README.md  flake.nix  query.gql  query.graphql
src/: gtfs_realtime.rs  gtfs_schedule.rs  main.rs
src/adapter/: adapter_impl.rs  edges.rs  entrypoints.rs  mod.rs  properties.rs  schema.gql  schema.graphql  tests.rs  vertex.rs
test_data/: TripUpdates.json  VehiclePositions.json
